step toward online poker. Add simple editor to misc. findbugs fixes. use public Base64Codec.java fix hashcode everywhere.